# storm-summoner

./: .cursorrules  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  SCENE_FORMAT.md  partitions.csv  sdkconfig.defaults  sdkconfig.monitor  settings.json
components/action/: CMakeLists.txt  action.c  action_boomerang.c  action_clock_burst.c  action_handlers_midi.c  action_handlers_modulation.c  action_handlers_scene.c  action_internal.h  action_morph.c  action_note_hold.c  action_punch_in.c  action_scheduler.c  action_strings.c  action_summary.c  action_validation.c  param_stream.c
components/action/include/: action.h  action_handlers_midi.h  action_note_hold.h  action_summary.h  param_stream.h
components/console_repl/: CMakeLists.txt  console_completion.c  console_repl.c
components/console_repl/include/: console_completion.h  console_repl.h
components/display/: CMakeLists.txt  SPARSE_BUFFER_SUMMARY.md  circular_display.c  coordinate_map.c  display.c  display_console.c  display_driver.c  gc9a01a_driver.c  performance.c  sparse_buffer.c  ssd1327_driver.c  st7789v3_driver.c
components/display/include/: circular_display.h  coordinate_map.h  display.h  display_console.h  display_driver.h  gc9a01a_driver.h  performance.h  sparse_buffer.h  ssd1327_driver.h  st7789v3_driver.h
components/lvgl/: CMakeLists.txt  chalet_ny_11.c  chalet_ny_11.h  chalet_ny_14.c  chalet_ny_14.h  chalet_ny_1960.c  chalet_ny_1960.h  chalet_ny_8.c  chalet_ny_8.h  flyer_venice_14.c  flyer_venice_14.h  flyer_venice_16.c  flyer_venice_16.h  flyer_venice_18.c  flyer_venice_18.h  flyer_venice_20.c  flyer_venice_20.h  flyer_venice_24.c  flyer_venice_24.h  flyer_venice_30.c  flyer_venice_30.h  lv_conf.h  lv_version.h  lvgl.h  polygon.c  polygon.h
components/lvgl/src/: lv_conf_internal.h  lvgl_private.h
components/menu/: CMakeLists.txt  menu.c  menu_theme.c
components/menu/include/: action_config.h  menu.h  menu_pages.h  menu_theme.h
components/menu/pages/: about.c  action_config.c  adc_manager.c  als_scene.c  app_settings.c  assets_manager.c  bump.c  buttons.c  buttons_menu.c  cc_defaults_menu.c  cc_triggers_scene.c  clock_sync.c  config.c  current_scene.c  cv.c  cv_scene.c  dac.c  device_config.c  display.c  event_bus.c  expression.c  firmware_update.c  haptic.c  i2c_common.c  index.c  input_manager.c  inspect_scene.c  led.c  lfo1_scene.c  lfo2_scene.c  midi.c  note_track_scene.c  on_load_menu.c  on_play_menu.c  pads_menu.c  proximity_scene.c  revision.c  rtg_scene.c  sample_hold_scene.c  scenes.c  (+21 more)
components/midi/: CMakeLists.txt  midi_als_scene_handler.c  midi_callback_bridge.c  midi_callbacks.c  midi_console.c  midi_control.c  midi_cv_scene_handler.c  midi_expression_handler.c  midi_expression_scene_handler.c  midi_identity.c  midi_in.c  midi_in_debug.c  midi_in_event_handler.c  midi_in_loopback.c  midi_in_parser.c  midi_in_uart.c  midi_in_usb.c  midi_lfo_scene_handler.c  midi_local_output.c  midi_loopback.c  midi_messages.c  midi_note_track_scene_handler.c  midi_out.c  midi_out_uart.c  midi_out_usb.c  midi_passthrough.c  midi_proximity_scene_handler.c  midi_sample_hold_scene_handler.c  midi_scene_handler.c  midi_send_console.c  midi_sensor_event_handler.c  midi_sysex_update.c  midi_tempo.c  midi_tempo_event_handler.c  midi_tilt_scene_handler.c  midi_touchwheel_scene_handler.c
components/midi/include/: midi_als_scene_handler.h  midi_callbacks.h  midi_console.h  midi_control.h  midi_cv_scene_handler.h  midi_expression_handler.h  midi_expression_scene_handler.h  midi_identity.h  midi_in.h  midi_in_debug.h  midi_in_event_handler.h  midi_in_loopback.h  midi_in_parser.h  midi_in_uart.h  midi_in_usb.h  midi_lfo_scene_handler.h  midi_local_output.h  midi_loopback.h  midi_messages.h  midi_note_track_scene_handler.h  midi_out.h  midi_out_uart.h  midi_out_usb.h  midi_passthrough.h  midi_proximity_scene_handler.h  midi_sample_hold_scene_handler.h  midi_scene_handler.h  midi_send_console.h  midi_sensor_event_handler.h  midi_sysex_update.h  midi_tempo.h  midi_tilt_scene_handler.h  midi_touchwheel_scene_handler.h
components/miniz/: CMakeLists.txt  miniz.c  miniz_tdef.c  miniz_tinfl.c  readme.md
components/scene/: CMakeLists.txt  continuous_mapping.c  scene.c  scene_assign_console.c  scene_console.c  scene_inspect.c  scene_name_gen.c  scene_test.c  smart_filter.c  tempo_nudge.c
components/scene/include/: als_mode_mapping.h  continuous_mapping.h  cv_mode_mapping.h  expression_mode_mapping.h  lfo_mode_mapping.h  note_track_mode_mapping.h  proximity_mode_mapping.h  rtg_mode_mapping.h  sample_hold_mode_mapping.h  scene.h  scene_assign_console.h  scene_console.h  scene_inspect.h  scene_name_gen.h  scene_test.h  smart_filter.h  tempo_nudge.h  tilt_mode_mapping.h  touchwheel_mode_mapping.h
components/settings_registry/: CMakeLists.txt  settings_registry.c
components/settings_registry/include/: settings_registry.h
components/touch/: CMakeLists.txt  touch.c  touch_console.c  touch_debug.c  touch_gestures.c  touch_legacy.c  touch_modes.c  touch_monitor.c  touch_simple.c  touch_thresholds.c  touchwheel.c  touchwheel_analog.c  touchwheel_core.c  touchwheel_modes.c  touchwheel_outputs.c  touchwheel_strategy_analog.c  touchwheel_strategy_binary.c
components/touch/include/: touch.h  touch_debug.h  (+14 more)
components/ui/: CMakeLists.txt  audio_calibrate.c  background.c  beat.c  boundary_circle.c  buttons.c  buttons_lvgl.c  compressed_loader.c  draw_image.c  draw_lizard.c  earth.c  globe.c  greyscale_test.c  inspect_config.c  inspect_overlay.c  inspect_ui.c  kabaragoya.c  khyron.c  lizard.c  lv_boundary_circle.c  lv_globe.c  lv_lizard.c  lv_pizza.c  lv_pizza2.c  lv_plasma.c  lv_radar.c  lv_slices.c  lv_sphere.c  lv_sphere2.c  lv_starfield.c  lv_vector_art.c  name_edit.c  pixel_art.c  pixels.c  pizza.c  pizza2.c  plasma.c  programming_menu.c  radar.c  scene.c  (+27 more)
components/usb_cdc_update/: CMakeLists.txt  usb_cdc_update.c
components/version/: CMakeLists.txt  version.c  version_console.c
main/: CMakeLists.txt  io.h  ldo.c  ldo.h  main.c  task_priorities.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h
(+479 files in other folders)
