idf_component_register(
  SRCS
    "menu.c"
    "pages/index.c"
    "pages/scenes.c"
    "pages/current_scene.c"
    "pages/device_config.c"
    "pages/settings.c"
    "pages/about.c"
    "pages/config.c"
    "pages/touch.c"
    "pages/midi.c"
    "pages/screensaver.c"
    "pages/expression.c"
    "pages/settings_expression.c"
    "pages/cv.c"
    "pages/cv_scene.c"
    "pages/sensor.c"
    "pages/proximity_scene.c"
    "pages/als_scene.c"
    "pages/settings_proximity.c"
    "pages/settings_als.c"
    "pages/buttons_menu.c"
    "pages/on_load_menu.c"
    "pages/tempo.c"
    "pages/led.c"
    "pages/buttons.c"
    "pages/bump.c"
    "pages/ui.c"
    "pages/display.c"
    "pages/usb_mode.c"
    "pages/revision.c"
    "pages/assets_manager.c"
    "pages/firmware_update.c"
    "pages/touchwheel_menu.c"
    "pages/pads_menu.c"
    "pages/action_config.c"
    "pages/lfo1_scene.c"
    "pages/lfo2_scene.c"
  INCLUDE_DIRS
    "include"
  REQUIRES
    lvgl
    ui
    scene
    action
    curve
    config
    touch
    midi
    screensaver
    expression
    cv
    sensor
    tempo
    clock_sync
    buttons
    bump
    display
    revision
    version
    littlefs
    assets_manager
    firmware_update
    device_config
    lfo
  PRIV_REQUIRES main
)
