idf_component_register(
  SRCS
    "menu.c"
    "pages/index.c"
    "pages/scenes.c"
    "pages/current_scene.c"
    "pages/device_config.c"
    "pages/settings.c"
    "pages/about.c"
    "pages/config.c"
    "pages/touch.c"
    "pages/midi.c"
    "pages/expression.c"
    "pages/settings_expression.c"
    "pages/cv.c"
    "pages/cv_scene.c"
    "pages/sensor.c"
    "pages/proximity_scene.c"
    "pages/als_scene.c"
    "pages/settings_proximity.c"
    "pages/settings_als.c"
    "pages/buttons_menu.c"
    "pages/on_load_menu.c"
    "pages/tempo.c"
    "pages/led.c"
    "pages/buttons.c"
    "pages/bump.c"
    "pages/display.c"
    "pages/touchwheel_menu.c"
    "pages/pads_menu.c"
    "pages/action_config.c"
    "pages/lfo1_scene.c"
    "pages/lfo2_scene.c"
    "pages/rtg_scene.c"
  INCLUDE_DIRS
    "include"
  REQUIRES
    lvgl
    ui
    scene
    action
    curve
    config
    touch
    midi
    screensaver
    expression
    cv
    sensor
    tempo
    clock_sync
    buttons
    bump
    display
    version
    littlefs
    device_config
    lfo
    rtg
  PRIV_REQUIRES main
)
