idf_component_register(
  SRCS
    "menu.c"
    "pages/index.c"
    "pages/scenes.c"
    "pages/current_scene.c"
    "pages/device_config.c"
    "pages/settings.c"
    "pages/about.c"
    "pages/config.c"
    "pages/touch.c"
    "pages/midi.c"
    "pages/settings_midi_control.c"
    "pages/expression.c"
    "pages/settings_expression.c"
    "pages/cv.c"
    "pages/cv_scene.c"
    "pages/sensor.c"
    "pages/proximity_scene.c"
    "pages/als_scene.c"
    "pages/settings_proximity.c"
    "pages/settings_als.c"
    "pages/settings_tilt.c"
    "pages/tilt_scene.c"
    "pages/tilt_axis_scene.c"
    "pages/buttons_menu.c"
    "pages/on_load_menu.c"
    "pages/on_play_menu.c"
    "pages/tempo.c"
    "pages/led.c"
    "pages/buttons.c"
    "pages/bump.c"
    "pages/display.c"
    "pages/theme.c"
    "menu_theme.c"
    "pages/touchwheel_menu.c"
    "pages/pads_menu.c"
    "pages/action_config.c"
    "pages/lfo1_scene.c"
    "pages/lfo2_scene.c"
    "pages/rtg_scene.c"
    "pages/sample_hold_scene.c"
    "pages/cc_triggers_scene.c"
    "pages/note_track_scene.c"
    "pages/cc_defaults_menu.c"
    "pages/scope_config.c"
    "pages/settings_note_track.c"
    "pages/settings_scene_inspect.c"
    "pages/inspect_scene.c"
  INCLUDE_DIRS
    "include"
  REQUIRES
    lvgl
    ui
    scene
    action
    curve
    config
    touch
    midi
    screensaver
    expression
    cv
    sensor
    tempo
    clock_sync
    buttons
    lis3dhtr
    display
    version
    littlefs
    device_config
    lfo
    rtg
    sample_hold
    note_track
    app_settings
  PRIV_REQUIRES main
)
