idf_component_register(
  SRCS
    "settings_registry.c"
  INCLUDE_DIRS
    "include"
  REQUIRES
    app_settings
    buttons
    lis3dhtr
    clock_sync
    config
    cv
    display
    expression
    menu
    midi
    note_track
    scene
    screensaver
    sensor
    tempo
    touch
    ui
  PRIV_REQUIRES main
)
