idf_component_register(
  SRCS
    "touch.c"
    "touch_thresholds.c"
    "touch_debug.c"
    "touch_console.c"
  INCLUDE_DIRS 
    "include"
  REQUIRES 
    log 
    driver
    esp_driver_touch_sens
    esp_timer 
    freertos
    app_settings
    event_bus
    task_monitor
    console
  PRIV_REQUIRES 
    main
)